Update to work with github

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ baseurl: "/appsscript"
 url: ""
 
 # Theme
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
 remote_theme: pages-themes/minimal@v0.2.0
 
 # Plugins
